# estimation_series

./: base_function.m  base_function2.m  coeff_base.m  coeff_base2.m  construction_tab_func.m  estimation_prod_scal.m  estimation_prod_scal2.m  liste_fonctions.txt  main_series_ortho.m  points.txt  reconstruction_estime.m  reconstruction_estime2.m
C++/: CMakeLists.txt  FindOpenCL.cmake  fonctions.hpp  gpu.cl  main.cpp
